# tailscale-ollama-expose

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: basic_usage.py
src/ollama_expose/: __init__.py  cli.py  config.py  server.py
tests/: test_config.py  test_server.py
