[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailscale-ollama-expose"
version = "0.1.0"
description = "FastAPI reverse proxy exposing local Ollama over Tailscale"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Filipe Torres de Carvalho", email = "filipetorresdecarvalho@gmail.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
    "ruff>=0.6.0",
]

[project.scripts]
ollama-expose = "ollama_expose.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_expose"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
